<resources>
    <string name="app_name">BreathingExercises</string>
    <string name="logo_text1">VOZDUKH</string>
    <string name="logo_text2">breathing exercises</string>
    <string name="inhale">Вдох</string>
    <string name="exhale">Выдох</string>
    <string name="delay">Задержите дыхание</string>

    <string name="next">Продолжить</string>

    <string name="start">Дышать</string>
    <string name="stop">Стоп</string>
    <string name="back">Назад</string>
    <string name="backsms">Нажмите еще раз, чтобы выйти</string>


    <string name="menu_hi">Привет, Юлия</string>
    <string name="menu_motivation_text">Вдыхаю спокойствие, выдыхаю\nнегатив</string>
    <string name="textTitle1">Коробочное\nдыхание</string>
    <string name="textDescription1">Tехника релаксации, предполагающая вдох, задержку дыхания и выдох за равные \nпромежутки времени</string>
    <string name="textTitle2">Техника 4-7-8</string>
    <string name="textDescription2">Техника 4-7-8, также известная как «расслабляющее дыхание»,\nснимает стресс и снижает тревожность, а также помогает быстро уснуть</string>
    <string name="textTitle3">Глубокое дыхание</string>

    <string name="thought1">      Дыхательные упражнения\nпомогают снизить уровень\nстресса и тревожности</string>
    <string name="thought2">      Улучшает кислородное\nобеспечение организма,\nчто благотворно влияет на работу\nсердечно-сосудистой\nсистемы</string>
    <string name="thought3">      Дыхательные упражнения могут\nпомочь улучшить фокус внимания,\nсосредотачиваться на\nтекущем моменте и уменьшить\nбеспокойство</string>
    <string name="thought4">      Расслабляющие дыхательные\nтехники могут быть полезными перед\nсном, помогая снять напряжение и\nподготовить организм к отдыху</string>
    <string name="thought5">      Для поддержания общего\nздоровья и управления стрессом\nрекомендуется выполнять\nдыхательных упражнения 5-10\nминут в день</string>
    <string name="thought6">      В периоды повышенного\nстресса или тревоги полезно\nуделять дополнительное\nвнимание дыхательным\nпрактикам. Это может помочь\nснизить уровень стресса и\nулучшить общее состояние</string>
    <string name="thought7">      Если вы испытываете трудности\nс засыпанием, проведение\nдыхательных упражнений перед\nсном может помочь создать\nспокойную атмосферу и улучшить\nкачество сна</string>
    <string name="thought8">В установленной вами версии есть 2 вида дыхательных практик. Мы развиваем наш проект. Расширения будут доступны уже совсем скоро</string>
    <string name="thought9">По вопросам сотрудничества: clevercake.web@gmail.com                           </string>
    <string name="thought10">Желаем вам хорошей практики!                                   </string>


    <string name="time1">20 мин</string>
    <string name="time2">6 мин</string>
    <string name="time3">13 мин</string>
</resources>