<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/bg_intro1_list_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/bg_intro1_list_1" />

        <ImageView
            android:id="@+id/bg_intro1_list_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:srcCompat="@drawable/bg_intro1_list_2" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="70">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logo_text1"
                    android:textSize="32dp"
                    android:fontFamily="@font/alegreya_medium"
                    android:textColor="@color/black_blue_text"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="196dp"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logo_text2"
                    android:textSize="15dp"
                    android:fontFamily="@font/inter_semi_bold"
                    android:textColor="@color/black_blue_text"
                    android:layout_marginLeft="155dp"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="30">

                <ImageView
                    android:id="@+id/check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/icon_check"
                    android:layout_marginLeft="75dp"/>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thought1"
                    android:textSize="22dp"
                    android:fontFamily="@font/alegreya_sans_regular"
                    android:textColor="@color/black_70"
                    android:layout_marginLeft="80dp"/>
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>