<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fone">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/bg_main_2"
            android:layout_gravity="bottom"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/bg_main_1"
            android:layout_gravity="end"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="26">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_medium"
                    android:text="@string/menu_hi"
                    android:textColor="@color/black"
                    android:textSize="30dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="72dp"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sans_regular"
                    android:text="@string/menu_motivation_text"
                    android:textColor="@color/black_70"
                    android:textSize="22dp"
                    android:layout_marginLeft="35dp"/>
            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70">

<!--            <ScrollView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">

                    <FrameLayout
                        android:id="@+id/deep_breathing"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="@drawable/rounded_corners_background_red"
                        android:layout_marginBottom="16dp">
                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/textTitle3"
                                android:textSize="20dp"
                                android:fontFamily="@font/alegreya_medium"
                                android:layout_gravity="center|start"
                                android:layout_marginLeft="20dp"
                                android:textColor="@color/black"/>

                            <FrameLayout
                                android:id="@+id/deep_breathing_time"
                                android:layout_width="57dp"
                                android:layout_height="24dp"
                                android:background="@drawable/rounded_corners_background_white"
                                android:layout_marginBottom="16dp"
                                android:layout_gravity="right"
                                android:layout_marginRight="20dp"
                                android:layout_marginTop="16dp">

                                <TextView
                                    android:id="@+id/textView9"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/time3"
                                    android:textSize="15dp"
                                    android:fontFamily="@font/alegreya_medium"
                                    android:layout_gravity="center"
                                    />
                            </FrameLayout>
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:id="@+id/box_breathing"
                            android:layout_width="wrap_content"
                            android:layout_height="109dp"
                            android:layout_weight="1"
                            android:background="@drawable/rounded_corners_background_green"
                            android:layout_marginRight="16dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView18"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center|start"
                                    android:layout_marginLeft="20dp"
                                    android:layout_marginTop="12dp"
                                    android:fontFamily="@font/alegreya_medium"
                                    android:text="@string/textTitle1"
                                    android:textColor="@color/black"
                                    android:textSize="20dp" />

                                <FrameLayout
                                    android:id="@+id/box_breathing_time"
                                    android:layout_width="57dp"
                                    android:layout_height="24dp"
                                    android:layout_marginLeft="20dp"
                                    android:layout_marginTop="5dp"
                                    android:background="@drawable/rounded_corners_background_white">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:fontFamily="@font/alegreya_medium"
                                        android:text="@string/time1"
                                        android:textSize="15dp" />
                                </FrameLayout>
                            </LinearLayout>

                        </FrameLayout>

                        <FrameLayout
                            android:id="@+id/breathing_478"
                            android:layout_width="wrap_content"
                            android:layout_height="87dp"
                            android:layout_weight="1"
                            android:background="@drawable/rounded_corners_background_blue">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView28"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center|start"
                                    android:layout_marginLeft="20dp"
                                    android:fontFamily="@font/alegreya_medium"
                                    android:text="@string/textTitle2"
                                    android:textColor="@color/black"
                                    android:textSize="20dp"
                                    android:layout_marginTop="12dp"/>

                                <FrameLayout
                                    android:id="@+id/breathing_478_time"
                                    android:layout_width="57dp"
                                    android:layout_height="24dp"
                                    android:layout_marginRight="20dp"
                                    android:background="@drawable/rounded_corners_background_white"
                                    android:layout_marginLeft="20dp"
                                    android:layout_marginBottom="200dp"
                                    android:layout_marginTop="10dp">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:fontFamily="@font/alegreya_medium"
                                        android:text="@string/time2"
                                        android:textSize="15dp" />
                                </FrameLayout>
                            </LinearLayout>

                        </FrameLayout>

                    </LinearLayout>
                </LinearLayout>
<!--            </ScrollView>-->

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="98dp"
                android:layout_marginRight="98dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    app:srcCompat="@drawable/icon_profile" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    app:srcCompat="@drawable/icon_main" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@drawable/icon_analitics" />
            </LinearLayout>

        </FrameLayout>

    </LinearLayout>
</RelativeLayout>