<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/bg_intro3_list_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/bg_intro3_list_1"
            android:layout_marginLeft="51.23dp"/>

        <ImageView
            android:id="@+id/bg_intro3_list_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            app:srcCompat="@drawable/bg_intro3_list_2" />
        <ImageView
            android:id="@+id/bg_intro3_list_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:srcCompat="@drawable/bg_intro3_list_3" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="35">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom">

                    <ImageView
                        android:id="@+id/check3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="41.23dp"
                        app:srcCompat="@drawable/icon_check" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="46.23dp"
                        android:fontFamily="@font/alegreya_sans_regular"
                        android:text="@string/thought5"
                        android:textColor="@color/black_blue_bt"
                        android:textSize="22dp" />
                </FrameLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="17.23dp"
                        android:fontFamily="@font/alegreya_sans_regular"
                        android:text="@string/thought6"
                        android:textColor="@color/black_70"
                        android:textSize="22dp" />

                    <ImageView
                        android:id="@+id/check2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12.23dp"
                        app:srcCompat="@drawable/icon_check" />
                </FrameLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20">
                <ImageView
                    android:id="@+id/check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="54.23dp"
                    app:srcCompat="@drawable/icon_check"
                    android:layout_marginTop="25dp"/>
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="59.23dp"
                    android:fontFamily="@font/alegreya_sans_regular"
                    android:text="@string/thought4"
                    android:textColor="@color/black_70"
                    android:textSize="22dp"
                    android:layout_marginTop="25dp"/>


            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:layout_marginRight="28.23dp"
                android:layout_marginLeft="28.23dp">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:text="@string/next"
                    android:fontFamily="@font/alegrey_sans_medium"
                    android:textSize="25dp"
                    android:textAllCaps="false"/>
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>